Seite 1+2 mit Standard-Pipes soweit fertig.

--- a/angular.json
+++ b/angular.json
@@ -128,7 +128,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -174,7 +176,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "6b805b8c-5521-4350-9183-e722ea050662"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
